K8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health-app
  namespace: hs
spec:
  containers:
  - name: app
    image: artemprotchenko/myapp:latest
